cmake_minimum_required(VERSION 3.10.0)
project(data_structures LANGUAGES C VERSION 0.2.0)
set(CMAKE_C_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_subdirectory(Source)
add_subdirectory(Example)
add_subdirectory(Tests)

enable_testing()
add_test(NAME map_tests COMMAND ${EXECUTABLE_OUTPUT_PATH}/map_tests.exe)